Novas tentativas de corrigir as múltiplas entidades no banco

--- a/PocketQueue/PocketQueue/PocketQueue.csproj
+++ b/PocketQueue/PocketQueue/PocketQueue.csproj
@@ -95,6 +95,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Constantes.cs" />
     <Compile Include="Services\EmissaoSenhasService.cs" />
     <Compile Include="Services\LoginScreenService.cs" />
     <EmbeddedResource Include="EmissaoSenhas.resx">
