--- a/PocketQueue/PocketQueue/PocketQueue.csproj
+++ b/PocketQueue/PocketQueue/PocketQueue.csproj
@@ -53,6 +53,7 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -75,6 +76,12 @@
     <Compile Include="Entidades\ETipoSenha.cs" />
     <Compile Include="Entidades\ETipoUsuario.cs" />
     <Compile Include="Factory\ServiceFactory.cs" />
+    <Compile Include="FUNDO.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FUNDO.Designer.cs">
+      <DependentUpon>FUNDO.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,28 +94,34 @@
     <Compile Include="MenuPrincipal.Designer.cs">
       <DependentUpon>MenuPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="PainelAdministracao.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PainelAdministracao.Designer.cs">
-      <DependentUpon>PainelAdministracao.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Constantes.cs" />
     <Compile Include="Services\EmissaoSenhasService.cs" />
     <Compile Include="Services\LoginScreenService.cs" />
+    <Compile Include="TelaAtendente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelaAtendente.Designer.cs">
+      <DependentUpon>TelaAtendente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TelaCadastroUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelaCadastroUsuario.Designer.cs">
+      <DependentUpon>TelaCadastroUsuario.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="EmissaoSenhas.resx">
       <DependentUpon>EmissaoSenhas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FUNDO.resx">
+      <DependentUpon>FUNDO.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginScreen.resx">
       <DependentUpon>LoginScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MenuPrincipal.resx">
       <DependentUpon>MenuPrincipal.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PainelAdministracao.resx">
-      <DependentUpon>PainelAdministracao.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -120,6 +133,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TelaCadastroUsuario.resx">
+      <DependentUpon>TelaCadastroUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -173,6 +189,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Doctor Jones.wma" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\LogoPocketqueue2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
